# trabalho-grupo-eng-soft

./: .gitignore  Avaliacao_Sprint1.xlsx  gerar_avaliacao.py  roteiro_video.md  run_marmomanager.sh
Lista08 - Testes Unitários de GUI em Qt/A2_QTestProject/: unitTest.cpp
Lista08 - Testes Unitários de GUI em Qt/A3_QTestsGUI/QuartaWidgetApp/: FirstWidgetApp.pro  MyAutoMainWindow.h  loginDialogBox.cpp  loginDialogBox.h  main.cpp
marmomanager_cpp/: CMakeLists.txt  Makefile  README.md
marmomanager_cpp/docs/: Doxyfile  header.html  mainpage.dox
marmomanager_cpp/docs/html/: annotated.html  annotated_dup.js  application__controller_8cpp_source.html  application__controller_8h.html  application__controller_8h.js  application__controller_8h__dep__incl.map  application__controller_8h__dep__incl.md5  application__controller_8h_source.html  application__coordinator_8cpp_source.html  application__coordinator_8h.html  application__coordinator_8h.js  application__coordinator_8h__dep__incl.map  application__coordinator_8h__dep__incl.md5  application__coordinator_8h__incl.map  application__coordinator_8h__incl.md5  application__coordinator_8h_source.html  auth__controller_8cpp_source.html  auth__controller_8h.html  auth__controller_8h.js  auth__controller_8h__dep__incl.map  auth__controller_8h__dep__incl.md5  auth__controller_8h__incl.map  auth__controller_8h__incl.md5  auth__controller_8h_source.html  classApplicationController-members.html  classApplicationController.html  classApplicationController.js  classApplicationController__coll__graph.map  classApplicationController__coll__graph.md5  classApplicationCoordinator-members.html  classApplicationCoordinator.html  classApplicationCoordinator.js  classApplicationCoordinator__coll__graph.map  classApplicationCoordinator__coll__graph.md5  classAuthController-members.html  classAuthController.html  classAuthController.js  classAuthController__coll__graph.map  classAuthController__coll__graph.md5  classDatabase-members.html  (+434 more)
marmomanager_cpp/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  (+30 more)
marmomanager_cpp/includes/: application_controller.h  auth_controller.h  database.h  historico_repository.h  os_controller.h  os_model.h  os_repository.h  password_hasher.h  user_model.h  user_repository.h
marmomanager_cpp/src/: application_controller.cpp  auth_controller.cpp  database.cpp  historico_repository.cpp  main.cpp  os_controller.cpp  os_repository.cpp  password_hasher.cpp  user_repository.cpp
marmomanager_cpp/src/ui/: application_coordinator.cpp  application_coordinator.h  history_dialog.cpp  history_dialog.h  login_dialog.cpp  login_dialog.h  main_window.cpp  main_window.h
marmomanager_cpp/tests/acceptance/: test_acceptance_bdd.cpp
marmomanager_cpp/tests/acceptance/features/: autenticacao.feature  ordem_servico.feature
marmomanager_cpp/tests/func/: test_func_gui.cpp  test_login_gui.cpp
marmomanager_cpp/tests/unit/: test_core.cpp  test_gui.cpp
